<resources>
    <string name="app_name">Basketball And News App</string>
    <string name="title_home">Home</string>
    <string name="title_tabella">Standings</string>
    <string name="title_hirek">News</string>
    <string name="title_notifications">Hírek</string>
    <string name="recycler_view_description">Lista elemek megjelenítése</string>
    <string name="table_scroll_description">Scrollable table view</string>
    <string name="header_position">P</string>
    <string name="header_teams">Teams</string>
    <string name="header_wins">W</string>
    <string name="header_losses">L</string>
    <string name="header_matches">G</string>
    <string name="mb1">MB1</string>
    <string name="euroleague">Euroleague</string>
    <string name="h">P</string>
    <string name="csapat">Teams</string>
    <string name="m">G</string>
    <string name="gy">W</string>
    <string name="v">L</string>
    <string name="story_1">Story 1</string>
    <string name="story_2">Story 2</string>
    <string name="tables">Tables</string>
    <string name="news">News</string>
    <string name="more">More</string>
    <string name="story_image">Story image</string>
    <string name="close">Close</string>
    <string name="teams">Teams</string>
    <string name="team_name">Team Name</string>
</resources>