<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="wifi.svdew.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_storyViewerFragment"
            app:destination="@id/storyViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/tabella"
        android:name="wifi.svdew.myapplication.ui.tabella.TabellaFragment"
        android:label="@string/title_tabella"
        tools:layout="@layout/fragment_tabella" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="wifi.svdew.myapplication.ui.news.NewsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/storyViewerFragment"
        android:name="wifi.svdew.myapplication.ui.home.StoryViewerFragment"
        android:label="StoryViewerFragment"
        tools:layout="@layout/fragment_story_viewer">

        <action
            android:id="@+id/action_storyViewerFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>